<package format="2">
  <name>dualarm_scheduler</name>
  <version>0.0.0</version>
  <description>Task Scheduling Package for Dual-arm Mobile Manipulator</description>
  <maintainer email="jaehyunlim@yonsei.ac.kr">Jaehyun Lim</maintainer>
  <license>None</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <build_export_depend>roscpp</build_export_depend>
</package>
